# citadelgrad-pascals-discrete-attractor

./: .gitignore  AGENTS.local.md  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.agents-reverse-engineer/: GENERATION-PLAN.md  config.yaml
.agents-reverse-engineer/logs/: run-generate-opencode-opencode-minimax-m2-5-free-2026-05-12T08-17-00-627Z.json
.opencode/agents/: are-summarizer.md
.tldr/: AGENTS.md
crates/attractor-agent/: AGENTS.md
crates/attractor-agent/src/: AGENTS.md  lib.rs  tests.rs
crates/attractor-cli/: AGENTS.md  Cargo.toml
crates/attractor-cli/src/: AGENTS.md  main.rs
crates/attractor-cli/src/commands/: AGENTS.md  decompose.rs  decompose_validate.rs  generate.rs  generate_tests.rs  init.rs  launch.rs  mod.rs  run.rs
crates/attractor-dot/: AGENTS.md
crates/attractor-dot/src/: AGENTS.md  parser.rs  parser_primitives.rs
crates/attractor-llm/: AGENTS.md
crates/attractor-llm/src/: AGENTS.md  anthropic.rs  anthropic_tests.rs  (+6 more)
crates/attractor-pipeline/: AGENTS.md  Cargo.toml
crates/attractor-quality/: Cargo.toml
crates/attractor-quality/src/: detect.rs  enrich.rs  lib.rs  manifest.rs  resolution.rs  telemetry.rs  trust.rs
crates/attractor-quality/templates/: default.toml  python.toml  rust.toml  typescript.toml
crates/attractor-tools/: AGENTS.md
crates/attractor-types/: AGENTS.md
crates/attractor-web/: AGENTS.md
docs/: AGENTS.md  cli-reference.md
docs/examples/: AGENTS.md
docs/plans/: AGENTS.md
docs/reviews/: SPEC_PAS_INIT-review.md
docs/specs/: SPEC_PAS_INIT.md
pipelines/: AGENTS.md
templates/: AGENTS.md
(+33 files in other folders)
