[package]
name = "attractor-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Pascal's Discrete Attractor — DOT-based pipeline runner for AI workflows"

[[bin]]
name = "pas"
path = "src/main.rs"

[dependencies]
attractor-types = { path = "../attractor-types" }
attractor-dot = { path = "../attractor-dot" }
attractor-llm = { path = "../attractor-llm" }
attractor-tools = { path = "../attractor-tools" }
attractor-agent = { path = "../attractor-agent" }
attractor-pipeline = { path = "../attractor-pipeline" }
attractor-quality = { path = "../attractor-quality" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
toml = "1"

[dev-dependencies]
tempfile = "3"
