[package]
name = "attractor-quality"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Manifest schema, walk-up resolution, and quality tooling for pas"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1"
blake3 = "1"
chrono = { workspace = true }
tempfile = "3"
dirs = "5"
tracing = { workspace = true }

[dev-dependencies]
